# session

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac.in  expidus.desktop.in
doc/: FAQ  NEWS.pre-4.3  README.Kiosk
essm-shutdown-helper/: Makefile.am  main.c
expidus1-session/: Makefile.am  com.expidus.session.policy.in2  essm-chooser.c  essm-chooser.h  essm-client-dbus.xml  essm-client.c  essm-client.h  essm-compat-gnome.c  essm-compat-gnome.h  essm-compat-kde.c  essm-compat-kde.h  essm-consolekit.c  essm-consolekit.h  essm-dns.c  essm-dns.h  essm-error.c  essm-error.h  essm-fadeout.c  essm-fadeout.h  essm-global.c  essm-global.h  essm-legacy.c  essm-legacy.h  essm-logout-dialog.c  essm-logout-dialog.h  essm-manager-dbus.xml  essm-manager.c  essm-manager.h  essm-properties.c  essm-properties.h  essm-shutdown-fallback.c  essm-shutdown-fallback.h  essm-shutdown.c  essm-shutdown.h  essm-startup.c  essm-startup.h  essm-systemd.c  essm-systemd.h  expidus-screensaver.c  expidus-screensaver.h  (+7 more)
expidus1-session-logout/: Makefile.am  expidus1-session-logout.1  expidus1-session-logout.desktop.in  main.c
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/24x24-actions/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/48x48-actions/: Makefile.am
icons/scalable/: Makefile.am
libessm/: Makefile.am  essm-shutdown-common.h  essm-util.c  essm-util.h
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  be@tarask.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  (+26 more)
scripts/: Makefile.am  startexpidus1.in  xflock4  xinitrc.in.in  xscreensaver.desktop.in
settings/: Makefile.am  esae-dialog.c  esae-dialog.h  esae-model.c  esae-model.h  esae-window.c  esae-window.h  expidus-session-settings.desktop.in  expidus1-session-settings-common.h  expidus1-session-settings.ui  expidus1-session.xml  main.c  session-editor.c
